[gd_scene load_steps=2 format=3 uid="uid://dqm2tfsxynhis"]

[ext_resource type="Script" uid="uid://c0a2j6k1hhrf1" path="res://src/ui/popups/loot_popup.gd" id="1_nd4l2"]

[node name="LootPopup" type="Window"]
initial_position = 2
size = Vector2i(145, 215)
wrap_controls = true
transient = true
exclusive = true
borderless = true
script = ExtResource("1_nd4l2")
metadata/_custom_type_script = "uid://c0a2j6k1hhrf1"

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="LootContainer" type="VBoxContainer" parent="MarginContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="LootLabel" type="Label" parent="MarginContainer/LootContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"HeaderSmall"
text = "You found:"
horizontal_alignment = 1

[node name="LootItemsContainer" type="VBoxContainer" parent="MarginContainer/LootContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 100)
layout_mode = 2

[node name="HSeparator" type="HSeparator" parent="MarginContainer/LootContainer/LootItemsContainer"]
modulate = Color(1, 1, 1, 0.3)
layout_mode = 2

[node name="GoldLabel" type="Label" parent="MarginContainer/LootContainer/LootItemsContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Gold: 0"

[node name="ItemsLabel" type="Label" parent="MarginContainer/LootContainer/LootItemsContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Items:"

[node name="ItemsList" type="VBoxContainer" parent="MarginContainer/LootContainer/LootItemsContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="NoLootLabel" type="Label" parent="MarginContainer/LootContainer/LootItemsContainer"]
unique_name_in_owner = true
visible = false
modulate = Color(0.7, 0.7, 0.7, 1)
layout_mode = 2
text = "Nothing of value..."
horizontal_alignment = 1

[node name="HSeparator2" type="HSeparator" parent="MarginContainer/LootContainer"]
modulate = Color(1, 1, 1, 0.3)
layout_mode = 2

[node name="CollectBtn" type="Button" parent="MarginContainer/LootContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Collect Loot"
